--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
             "database/seeds",
             "database/factories"
         ],
+        "files": [
+            "app/Http/Helpers/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         }
