--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.2.0",
+        "maatwebsite/excel": "^3.0",
         "thomaswelton/laravel-gravatar": "~1.0"
     },
     "require-dev": {
